2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/cahrt/renderer/LookupPaintScale.java
	(add(Number, Paint)): Removed,
	* tests/org/jfree/chart/renderer/junit/LookupPaintScaleTests.java:
	Updated for deprecated code removal,
	* tests/org/jfree/chart/renderer/xy/junit/XYBlockRendererTests.java:
	Likewise.

2007-06-20  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(seriesVisible): Removed,
	(seriesVisibleInLegend): Likewise,
	(paint): Likewise,
	(fillPaint): Likewise,
	(outlinePaint): Likewise,
	(stroke): Likewise,
	(outlineStroke): Likewise,
	(shape): Likewise,
	(itemLabelsVisible): Likewise,
	(itemLabelFont): Likewise,
	(itemLabelPaint): Likewise,
	(positiveItemLabelPosition): Likewise,
	(negativeItemLabelPosition): Likewise,
	(createEntities): Likewise,
	(AbstractRenderer()): Updated for removed fields,
	(isSeriesVisible): Likewise,
	(getSeriesVisible): Removed,
	(setSeriesVisible(Boolean): Likewise,
	(setSeriesVisible(Boolean, boolean): Likewise,
	(isSeriesVisibleInLegend): Updated for removed fields,
	(getSeriesVisibleInLegend): Removed,
	(setSeriesVisibleInLegend(Boolean): Likewise,
	(setSeriesVisibleInLegend(Boolean, boolean): Likewise,
	(lookupSeriesPaint): Updated for removed fields,
	(setPaint(Paint)): Removed,
	(setPaint(Paint, boolean)): Likewise,
	(lookupSeriesFillPaint): Updated for removed fields,
	(setFillPaint(Paint)): Removed,
	(setFillPaint(Paint, boolean)): Likewise,
	(lookupSeriesOutlinePaint): Updated for removed fields,
	(setOutlinePaint(Paint)): Removed,
	(setOutlinePaint(Paint, boolean)): Likewise,
	(lookupSeriesStroke): Updated for removed fields,
	(setStroke(Stroke)): Removed,
	(setStroke(Stroke, boolean)): Likewise,
	(lookupSeriesOutlineStroke): Updated for removed fields,
	(setOutlineStroke(Stroke)): Removed,
	(setOutlineStroke(Stroke, boolean)): Likewise,
	(lookupSeriesShape): Updated for removed fields,
	(setShape(Shape)): Removed,